--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
 <h3>Feature 1</h3>
 <h4>Feature 2</h4>
 <h5>Feature 3</h5>
-<small>This Bug has been fixed</small>
+<p class="bug">This bug has been fixed</p>
 </body>
 </html>
